<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:baselineAligned="false"
    android:gravity="center_horizontal" >









    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical|fill_vertical|center_horizontal"
        android:background="@android:color/darker_gray"
        android:gravity="top"
        android:orientation="vertical" >



        <TextView
            android:id="@+id/headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"
            android:lines="1"
            android:text="@string/position"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black" />









        <Button
            android:id="@+id/centerLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@android:drawable/btn_default"
            android:padding="5dp"
            android:text="@string/centerLocation"
            android:textColor="@android:color/black" />




        <Button
            android:id="@+id/showAccesspoints"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@android:drawable/btn_default"
            android:padding="5dp"
            android:text="@string/showAccesspoints"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black" />



        <Button
            android:id="@+id/hints"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@android:drawable/btn_default"
            android:text="@string/hints"
            android:textColor="@android:color/black" />



        <Button
            android:id="@+id/showData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@android:drawable/btn_default"
            android:text="@string/showData"
            android:textColor="@android:color/black" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent" >

        <com.locator.wlan.graphics.TouchView
            android:id="@+id/areaMap"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp" />


        <TextView
            android:id="@+id/errorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/noMap"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </RelativeLayout>

</LinearLayout>
