<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:background="@android:color/darker_gray"
    android:baselineAligned="false"
    android:gravity="center_horizontal" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical|fill_vertical|center_horizontal"
        android:background="@android:color/darker_gray"
        android:gravity="top"
        android:orientation="vertical" >


        <TextView
            android:id="@+id/headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"
            android:lines="1"
            android:text="@string/manageAccessPoints"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black" />



        <Button
            android:id="@+id/declareLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@android:drawable/btn_default"
            android:padding="5dp"
            android:text="@string/declarePosition"
            android:textColor="@android:color/black" />



        <Button
            android:id="@+id/newAccesspoint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@android:drawable/btn_default"
            android:padding="5dp"
            android:text="@string/newAcesspoint"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black" />



        <Button
            android:id="@+id/changeAcesspoint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@android:drawable/btn_default"
            android:text="@string/changeAcesspoint"
            android:textColor="@android:color/black" />













        <TextView
            android:id="@+id/mapheading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/mapsHeading"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black" />

        <ListView
            android:id="@+id/mapList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@android:color/background_light" >

        </ListView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="820dp"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray"
        android:orientation="vertical" >

        <com.locator.wlan.graphics.TouchView
            android:id="@+id/areaMap"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@android:color/background_light" />

        <ListView
            android:id="@+id/accesspointList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="3"
            android:background="@android:color/background_light" >

        </ListView>

    </LinearLayout>

    <ListView
        android:id="@+id/mappedaccesspoints"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:background="@android:color/background_light" >

    </ListView>

</LinearLayout>
